Fix font-weight on Firefox

--- a/_sass/components/page-title.scss
+++ b/_sass/components/page-title.scss
@@ -5,7 +5,7 @@
 
   h1 {
     text-align: center;
-    font-weight: 300;
+    font-weight: 400;
     font-size: $size-1;
     margin-bottom: 0.75em;
     color: $primary;
