--- a/_sass/pages/home.scss
+++ b/_sass/pages/home.scss
@@ -90,7 +90,7 @@
       line-height: 2.5rem;
       margin-right: .5rem;
       color: $purple-400;
-      font-weight: 300;
+      font-weight: 400;
       white-space: nowrap;
     }
 
@@ -100,7 +100,7 @@
       justify-content: center;
       display: flex;
       flex-direction: column;
-      font-weight: 300;
+      font-weight: 400;
     }
 
     &__month {
@@ -111,7 +111,7 @@
       justify-content: center;
       display: flex;
       flex-direction: column;
-      font-weight: 300;
+      font-weight: 400;
     }
 
     &__weekday {
